# LeetCodeGrind

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
75/: CountGoodNodesInBinaryTree.cpp  MoveZeroes.cpp  ReverseVowels.cpp  UniqueNumberOfOccurence.cpp  mergeStringsAlternately.cpp  reverseWords.cpp
DCC2024_Artur/: CMakeLists.txt
DCC2024_Artur/February/: Day1_Divide_Array_Into_Arrays_With_Max_Difference.cpp  Day1_Divide_Array_Into_Arrays_With_Max_Difference.py  Day2_Sequential_Digits.cpp  Day2_Sequential_Digits.py  Day3_Partition_Array_for_Maximum_Sum.cpp  Day3_Partition_Array_for_Maximum_Sum.py  Day4_Minimum_Window_Substring.cpp  Day4_Minimum_Window_Substring.py  Day5_First_Unique_Character_in_a_String.cpp  Day5_First_Unique_Character_in_a_String.py  Day6_Group_Anagrams.cpp  Day6_Group_Anagrams.py  Day7_Sort_Characters_By_Frequency.cpp  Day7_Sort_Characters_By_Frequency.py  Day8_Perfect_Squares.cpp  Day8_Perfect_Squares.py
DCC2024_Artur/January/: Day10_Amount_of_Time_for_Binary_Tree_to_Be_Infected.cpp  Day10_Amount_of_Time_for_Binary_Tree_to_Be_Infected.py  Day11_Maximum_Difference_Between_Node_and_Ancestor.cpp  Day11_Maximum_Difference_Between_Node_and_Ancestor.py  Day12_Determine_if_String_Halves_Are_Alike.cpp  Day12_Determine_if_String_Halves_Are_Alike.py  Day13_Minimum_Number_of_Steps_to_Make_Two_Strings_Anagram.cpp  Day13_Minimum_Number_of_Steps_to_Make_Two_Strings_Anagram.py  Day14_Determine_if_Two_Strings_Are_Close.cpp  Day14_Determine_if_Two_Strings_Are_Close.py  Day15_Find_Players_With_Zero_or_One_Losses.cpp  Day15_Find_Players_With_Zero_or_One_Losses.py  Day16_Insert_Delete_GetRandom_O(1).cpp  Day16_Insert_Delete_GetRandom_O(1).py  Day17_Unique_Number_of_Occurrences.cpp  Day17_Unique_Number_of_Occurrences.py  Day18_Climbing_Stairs.cpp  Day18_Climbing_Stairs.py  Day19_Minimum_Falling_Path_Sum.cpp  Day19_Minimum_Falling_Path_Sum.py  Day1_Assign_Cookies.cpp  Day1_Assign_Cookies.py  Day20_Sum_of_Subarray_Minimums.cpp  Day20_Sum_of_Subarray_Minimums.py  Day21_House_Robber.cpp  Day21_House_Robber.py  Day22_Set_Mismatch.cpp  Day22_Set_Mismatch.py  Day23_Maximum_Length_of_a_Concatenated_String_with_Unique_Characters.cpp  Day24_Pseudo-Palindromic_Paths_in_a_Binary_Tree.cpp  Day24_Pseudo-Palindromic_Paths_in_a_Binary_Tree.py  Day25_Longest_Common_Subsequence.cpp  Day25_Longest_Common_Subsequence.py  Day26_Out_of_Boundary_Paths.cpp  Day26_Out_of_Boundary_Paths.py  Day27_K_Inverse_Pairs_Array.cpp  Day27_K_Inverse_Pairs_Array.py  Day28_Number_of_Submatrices_That_Sum_to_Target.cpp  Day28_Number_of_Submatrices_That_Sum_to_Target.py  Day29_Implement_Queue_using_Stacks.cpp  (+21 more)
DailyChallange/: ArithmeticSlices.cpp  AssignCookies.cpp  ClimbingStairs.cpp
LeetCode75_Artur/: CMakeLists.txt
LeetCode75_Artur/Array and String/: 1071_Greatest_Common_Divisor_of_Strings.cpp  1071_Greatest_Common_Divisor_of_Strings.py  1431._Kids_With_the_Greatest_Number_of_Candies.cpp  151_Reverse_Words_in_a_String.cpp  151_Reverse_Words_in_a_String.py  1768_Merge_Strings_Alternately.cpp  1768_Merge_Strings_Alternately.py  238_Product_of_Array_Except_Self.cpp  238_Product_of_Array_Except_Self.py  334_Increasing_Triplet_Subsequence.cpp  334_Increasing_Triplet_Subsequence.py  443_String_Compression.cpp  443_String_Compression.py  605_Can_Place_Flowers.cpp  605_Can_Place_Flowers.py  kidsWithCandies.py
LeetCode75_Artur/Binary Search/: 162_Find_Peak_Element.cpp  162_Find_Peak_Element.py  2300_Successful_Pairs_of_Spells_and_Potions.cpp  2300_Successful_Pairs_of_Spells_and_Potions.py
LeetCode75_Artur/Binary Search Tree/: 450_Delete_Node_in_a_BST.cpp  450_Delete_Node_in_a_BST.py
LeetCode75_Artur/Binary Tree - BFS/: 199_Binary_Tree_Right_Side_View.cpp  199_Binary_Tree_Right_Side_View.py
LeetCode75_Artur/Binary Tree - DFS/: 1372_Longest_ZigZag_Path_in_a_Binary_Tree.cpp  1372_Longest_ZigZag_Path_in_a_Binary_Tree.py  1448_Count_Good_Nodes_in_Binary_Tree.cpp  437_Path_SumIII.cpp  437_Path_SumIII.py  872_Leaf-Similar_Trees.cpp  872_Leaf-Similar_Trees.py  goodNodes.py
LeetCode75_Artur/Bit Manipulation/: 338_Counting_Bits.cpp  338_Counting_Bits.py
LeetCode75_Artur/DP - 1D/: 1137_N-th_Tribonacci_Number.cpp  1137_N-th_Tribonacci_Number.py  198_House_Robber.cpp  198_House_Robber.py
LeetCode75_Artur/DP - Multidimensional/: 62_Unique_Paths.cpp  62_Unique_Paths.py  714_Best_Time_to_Buy_and_Sell_Stock_with_Transaction_Fee.cpp  714_Best_Time_to_Buy_and_Sell_Stock_with_Transaction_Fee.py
LeetCode75_Artur/Graphs - BFS/: 1926_Nearest_Exit_from_Entrance_in_Maze.cpp  1926_Nearest_Exit_from_Entrance_in_Maze.py
LeetCode75_Artur/Graphs - DFS/: 547_Number_of_Provinces.cpp  547_Number_of_Provinces.py  841_Keys_and_Rooms.cpp  canVisitAllRooms.py
LeetCode75_Artur/Hash Map and Set/: 1207_Unique_Number_of_Occurrences.cpp  1207_Unique_Number_of_Occurrences.py  1657_Determine_if_Two_Strings_Are_Close.cpp  1657_Determine_if_Two_Strings_Are_Close.py  2352_Equal_Row_and_Column_Pairs.cpp  2352_Equal_Row_and_Column_Pairs.py  findDifference.py
LeetCode75_Artur/Heap and Priority Queue/: 215_Kth_Largest_Element_in_an_Array.cpp  215_Kth_Largest_Element_in_an_Array.py  2336_Smallest_Number_in_Infinite_Set.cpp  2336_Smallest_Number_in_Infinite_Set.py
LeetCode75_Artur/Linked List/: 2095_Delete_the_Middle_Node_of_a_Linked_List.cpp  2095_Delete_the_Middle_Node_of_a_Linked_List.py  328_Odd_Even_Linked_List.cpp  328_Odd_Even_Linked_List.py
LeetCode75_Artur/Prefix Sum/: 1732_Find_the_Highest_Altitude.cpp  1732_Find_the_Highest_Altitude.py
LeetCode75_Artur/Queue/: 649_Dota2_Senate.cpp  649_Dota2_Senate.py
LeetCode75_Artur/Sliding Window/: 1004_Max_Consecutive_OnesIII.cpp  1004_Max_Consecutive_OnesIII.py  1456_Maximum_Number_of_Vowels_in_a_Substring_of_Given_Length.cpp  1456_Maximum_Number_of_Vowels_in_a_Substring_of_Given_Length.py  643_Maximum_Average_Subarray_I.cpp  findMaxAverage.py
LeetCode75_Artur/Stack/: 394_Decode_String.cpp  decodeString.py
LeetCode75_Artur/Two Pointers/: 11_Container_With_Most_Water.cpp  11_Container_With_Most_Water.py  283_Move_Zeroes.cpp  392_Is_Subsequence.cpp  392_Is_Subsequence.py
(+1 files in other folders)
