cmake_minimum_required(VERSION 3.26)
project(LeetCodeGrind)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCodeGrind
        "LeetCode75_Artur/Array and String/1768_Merge_Strings_Alternately.cpp"
        "LeetCode75_Artur/Array and String/1071_Greatest_Common_Divisor_of_Strings.cpp"
        "LeetCode75_Artur/Bit Manipulation/338_Counting_Bits.cpp"
)
