cmake_minimum_required(VERSION 3.22)
project(DCC2024_Artur)

set(CMAKE_CXX_STANDARD 14)

add_executable(DCC2024_Artur
        January/Day1_Assign_Cookies.cpp
        January/Day2_Convert_an_Array_Into_a_2D_Array.cpp
        January/Day3_Number_of_Laser_Beams_in_a_Bank.cpp
        January/Day4_Minimum_Number_of_Operations_to_Make_Array_Empty.cpp
        January/Day5_Longest_Increasing_Subsequence.cpp
        January/Day6_Maximum_Profit_in_Job_Scheduling.cpp
        "January/Day7_ Arithmetic_SlicesII-Subsequence.cpp"
)
