cmake_minimum_required(VERSION 3.22)
project(DCC2024_Artur)

set(CMAKE_CXX_STANDARD 14)

add_executable(DCC2024_Artur
        January/Day1_Assign_Cookies.cpp
        January/Day2_Convert_an_Array_Into_a_2D_Array.cpp
        January/Day3_Number_of_Laser_Beams_in_a_Bank.cpp
        January/Day4_Minimum_Number_of_Operations_to_Make_Array_Empty.cpp
        January/Day5_Longest_Increasing_Subsequence.cpp
        January/Day6_Maximum_Profit_in_Job_Scheduling.cpp
        January/Day7_Arithmetic_SlicesII-Subsequence.cpp
        January/Day8_Range_Sum_of_BST.cpp
        January/Day9_Leaf-Similar_Trees.cpp
        January/Day10_Amount_of_Time_for_Binary_Tree_to_Be_Infected.cpp
        January/Day11_Maximum_Difference_Between_Node_and_Ancestor.cpp
        January/Day12_Determine_if_String_Halves_Are_Alike.cpp
        January/Day13_Minimum_Number_of_Steps_to_Make_Two_Strings_Anagram.cpp
        January/Day14_Determine_if_Two_Strings_Are_Close.cpp
        January/Day15_Find_Players_With_Zero_or_One_Losses.cpp
        "January/Day16_Insert_Delete_GetRandom_O(1).cpp"
        January/Day17_Unique_Number_of_Occurrences.cpp
        January/Day18_Climbing_Stairs.cpp
        January/Day19_Minimum_Falling_Path_Sum.cpp
        January/Day20_Sum_of_Subarray_Minimums.cpp
        January/Day21_House_Robber.cpp
        January/Day22_Set_Mismatch.cpp
        January/Day23_Maximum_Length_of_a_Concatenated_String_with_Unique_Characters.cpp
        January/Day24_Pseudo-Palindromic_Paths_in_a_Binary_Tree.cpp
        January/Day25_Longest_Common_Subsequence.cpp
)
