cmake_minimum_required(VERSION 3.22)
project(LeetCode75_Artur)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode75_Artur
        "Array and String/1768_Merge_Strings_Alternately.cpp"
        "Array and String/1071_Greatest_Common_Divisor_of_Strings.cpp"
        "Bit Manipulation/338_Counting_Bits.cpp"
        "Linked List/2095_Delete_the_Middle_Node_of_a_Linked_List.cpp"
        "Array and String/1431._Kids_With_the_Greatest_Number_of_Candies.cpp"
        "Two Pointers/283_Move_Zeroes.cpp"
)
