cmake_minimum_required(VERSION 3.22)
project(LeetCode75_Artur)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode75_Artur
        "Array and String/1768_Merge_Strings_Alternately.cpp"
        "Array and String/1071_Greatest_Common_Divisor_of_Strings.cpp"
        "Bit Manipulation/338_Counting_Bits.cpp"
        "Linked List/2095_Delete_the_Middle_Node_of_a_Linked_List.cpp"
        "Array and String/1431._Kids_With_the_Greatest_Number_of_Candies.cpp"
        "Two Pointers/283_Move_Zeroes.cpp"
        "Prefix Sum/1732_Find_the_Highest_Altitude.cpp"
        "Sliding Window/643_Maximum_Average_Subarray_I.cpp"
        "Binary Tree - DFS/1448_Count_Good_Nodes_in_Binary_Tree.cpp"
        "Array and String/605_Can_Place_Flowers.cpp"
        "Two Pointers/392_Is_Subsequence.cpp"
        "Hash Map and Set/1657_Determine_if_Two_Strings_Are_Close.cpp"
        "Graphs - DFS/841_Keys_and_Rooms.cpp"
        Stack/394_Decode_String.cpp
        "Binary Search Tree/450_Delete_Node_in_a_BST.cpp"
        Queue/649_Dota2_Senate.cpp
        "Binary Tree - DFS/872_Leaf-Similar_Trees.cpp"
        "Binary Tree - BFS/199_Binary_Tree_Right_Side_View.cpp"
        "Graphs - BFS/1926_Nearest_Exit_from_Entrance_in_Maze.cpp"
        "Heap and Priority Queue/215_Kth_Largest_Element_in_an_Array.cpp"
        "Binary Search/2300_Successful_Pairs_of_Spells_and_Potions.cpp"
        "DP - 1D/198_House_Robber.cpp"
        "DP - Multidimensional/62_Unique_Paths.cpp"
        "Array and String/151_Reverse_Words_in_a_String.cpp"
        "Array and String/334_Increasing_Triplet_Subsequence.cpp"
        "Binary Tree - DFS/437_Path_SumIII.cpp"
)
